--- a/MDK-ARM/103Test/103Test.build_log.htm
+++ b/MDK-ARM/103Test/103Test.build_log.htm
@@ -29,29 +29,30 @@ Project File Date:  07/26/2020
 Rebuild target '103Test'
 assembling startup_stm32f103xe.s...
 compiling main.c...
-compiling gpio.c...
-compiling stm32f1xx_it.c...
-compiling key.c...
-compiling tim.c...
 compiling usart.c...
+compiling tim.c...
+compiling gpio.c...
+compiling key.c...
+compiling stm32f1xx_it.c...
 compiling stm32f1xx_hal_msp.c...
 compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_rcc_ex.c...
+compiling delay.c...
 compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_exti.c...
 compiling system_stm32f1xx.c...
 compiling stm32f1xx_hal_uart.c...
 linking...
-Program Size: Code=6280 RO-data=360 RW-data=28 ZI-data=1220  
+Program Size: Code=6332 RO-data=360 RW-data=28 ZI-data=1220  
 FromELF: creating hex file...
 "103Test\103Test.axf" - 0 Error(s), 0 Warning(s).
 
